showing error mesg in register

--- a/Assignment/templates/home.html
+++ b/Assignment/templates/home.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
     <a href="login"><button>Login</button></a>
     <a href="register"><button>Register</button></a>
 </body>
