--- a/Assignment/templates/login.html
+++ b/Assignment/templates/login.html
@@ -8,18 +8,50 @@
 </head>
 <body>
     <div class="content-section">
+
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Login</legend>
                 <div class="form-group">
                     {{ form.username.label(class="form-control-label") }}
-                    {{ form.username(class="form-control form-control-lg") }}
+                    
+                    {%if form.username.errors%}
+                        {{ form.username(class="form-control form-control-lg is-invalid")}}
+                        <div class="invalid-feedback">
+                            {% for errors in form.username.errors%}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {%else%}
+                        {{ form.username(class="form-control form-control-lg") }}
+                    {% endif %}
                 </div>
                 <div class="form-group">
                     {{ form.password.label(class="form-control-label") }}
-                    {{ form.password(class="form-control form-control-lg") }}
+
+                    {%if form.password.errors%}
+                        {{ form.password(class="form-control form-control-lg is-invalid")}}
+                        <div class="invalid-feedback">
+                            {% for errors in form.username.errors%}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {%else%}
+                        {{ form.password(class="form-control form-control-lg") }}
+                    {% endif %}
                 </div>
+            
             </fieldset>
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
