--- a/Assignment/templates/login.html
+++ b/Assignment/templates/login.html
@@ -4,60 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
     <div class="content-section">
-
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                {% for category, message in messages %}
-                    <div class="alert alert-{{ category }}">
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
-
-        <form method="POST" action="">
-            {{ form.hidden_tag() }}
+        <form method="POST">
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Login</legend>
-                <div class="form-group">
-                    {{ form.username.label(class="form-control-label") }}
-                    
-                    {%if form.username.errors%}
-                        {{ form.username(class="form-control form-control-lg is-invalid")}}
-                        <div class="invalid-feedback">
-                            {% for errors in form.username.errors%}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {%else%}
-                        {{ form.username(class="form-control form-control-lg") }}
-                    {% endif %}
+                <div class="Login">
+                    <input type="text" placeholder="username" name="username" value="{{username}}" />
+                    <input type="password" placeholder="password" name="password" value="{{password}}" /> 
                 </div>
-                <div class="form-group">
-                    {{ form.password.label(class="form-control-label") }}
-
-                    {%if form.password.errors%}
-                        {{ form.password(class="form-control form-control-lg is-invalid")}}
-                        <div class="invalid-feedback">
-                            {% for errors in form.username.errors%}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {%else%}
-                        {{ form.password(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-            
+                {% if login_error %}
+                <div class="alert alert-danger">{{ login_error }}</div>
+                {% endif %} 
             </fieldset>
             <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
+                <button type="button" class="btn btn-outline-info" onclick="login()">Login</button>
             </div>
         </form>
     </div>
-    <!--JavaScript-->
+    <script>
+        var socketio = io();
+        const login = () => {
+            const username = document.getElementsByName('username')[0].value;
+            socketio.emit('user_salt', { username: username });
+            socketio.on('salt', function(data) {
+                const passwordField = document.getElementsByName('password')[0];
+                const passwordValue = passwordField.value;
+                const saltedPassword = passwordValue + data.salt;
+                const hashedPassword = CryptoJS.SHA256(saltedPassword).toString(CryptoJS.enc.Hex);
+                passwordField.value = hashedPassword;
+                document.querySelector('form').submit();
+            });
+        };
+        socketio.on('login_error', function(data) {
+                const error = data.error;
+                alert(error);
+            });
+    </script>
 </body>
 </html>
