--- a/Assignment/templates/register.html
+++ b/Assignment/templates/register.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/elliptic/6.5.4/elliptic.min.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
@@ -17,13 +18,14 @@
                     <input type="text" placeholder="username" name="username" value="{{username}}" />
                     <input type="password" placeholder="password" name="password" value="{{password}}" /> 
                     <input type="hidden" name="salt" id="salt" />
+                    <input type="hidden" name="PK" id="PK" />
                 </div>
                 {%if register_error %}
                 <div class="alert alert-danger">{{ register_error}}</div>
                 {% endif %} 
             </fieldset>
             <div class="form-group">
-                <button type="submit" class="btn btn-outline-info" onclick="hashPassword()">Sign up</button>
+                <button type="button" class="btn btn-outline-info" onclick="hashPassword()">Sign up</button>
             </div>
         </form>
     </div>
@@ -38,6 +40,11 @@
             var hashedPassword = CryptoJS.SHA256(saltedPassword).toString(CryptoJS.enc.Hex);
             passwordField.value = hashedPassword;
             document.getElementById('salt').value = salt;
+            const ec = new elliptic.ec('secp256k1');
+            const sha256Bytes = new Uint8Array(hashedPassword.match(/.{1,2}/g).map(byte => parseInt(byte, 16)));
+            const keyPair = ec.genKeyPair({ entropy: sha256Bytes });
+            document.getElementById('PK').value = keyPair.getPublic('hex');
+            document.querySelector('form').submit();
         }
 
         function generateSalt(){
