--- a/Assignment/templates/chathome.html
+++ b/Assignment/templates/chathome.html
@@ -3,6 +3,7 @@
 {% if current_user_name %}
         <div class="profile">
             <h3 class="profile_text">Logged in as: {{ current_user_name }}</h3>
+            <button type="button" onclick="Logout()">Logout</button>
             <h3 class="profile_text">You are: {{ role }}</h3>
         </div>
 {% endif %}
@@ -117,6 +118,10 @@
 
     const goBack = () =>{
         window.location.href = "/chathome";
+    }
+
+    function Logout(){
+        window.location.href = "/";
     }
 
 
